# rack

./: Cargo.toml  README.md  tags
migrations/2018-07-31-022335_clients/: up.sql
migrations/2018-08-01-045050_users/: up.sql
migrations/2018-08-01-054330_uniqueemails/: down.sql  up.sql
src/: account.rs  client.rs  main.rs  schema.rs  user.rs
static/css/: app.css
static/js/: app.js
templates/: base.tera  index.hbs  index.tera  register.hbs  register.html.tera  register.tera
